--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -1,42 +1,59 @@
 <section class="bg-gray-50 dark:bg-gray-900">
-	 <snack-bar [ngClass]="{'hidden':errorMessage.length == 0}" />
-	 <div class="flex flex-col items-center justify-center px-6 py-8 mx-auto md:h-screen lg:py-0">
-		  <div class="w-full bg-white rounded-lg shadow dark:border md:mt-0 sm:max-w-md xl:p-0 dark:bg-gray-800 dark:border-gray-700">
-				<div class="p-6 space-y-4 md:space-y-6 sm:p-8">
-					 <h1 class="text-xl font-bold leading-tight tracking-tight text-gray-900 md:text-2xl dark:text-white text-center">
-						  Signup
-					 </h1>
-					 <form class="space-y-4 md:space-y-6" (ngSubmit)="handleSignupSubmit()">
-						  <div>
-								<label for="name" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Your Name</label>
-								<input type="text" name="name" id="name" [(ngModel)]="user.name" #name="ngModel"
-								[ngClass]="{'border-red-600 outline-0': name.invalid && name.touched}" class="bg-gray-50 border border-gray-300 text-gray-900 rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="name" required>
-								<div *ngIf="name.invalid && name.touched">
-									<small class="text-red-600 ms-2">field should not be empty</small>
-								</div>
-						  </div>
-						  <div>
-								<label for="email" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Your email</label>
-								<input type="email" name="email" id="email" (input)="errorMessage = ''" [(ngModel)]="user.email" #email="ngModel" [ngClass]="{'border-red-600 outline-0': errorMessage || (email.invalid && email.touched) }" class="bg-gray-50 border border-gray-300 text-gray-900 rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="username" required>
-								<p class="text-red-600 text-xs ms-2 mt-1">{{errorMessage}}</p>
-								<div *ngIf="email.invalid && email.touched">
-									<small class="text-red-600 text-xs ms-2" *ngIf="email.errors?.['required'] && !errorMessage">Email is required</small>
-								</div>
-						  </div>
-						  <div>
-								<label for="password" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Password</label>
-								<input type="password" name="password" [(ngModel)]="user.password" id="password" placeholder="••••••••" #pass = "ngModel" class="bg-gray-50 border border-gray-300 text-gray-900 rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" required>
-								<small class="text-red-600 text-xs ms-2 mt-2" *ngIf="pass.invalid && pass.touched">
-									Field should not be empty
-								</small>
-						  </div>
-						  <button *ngIf="pass.invalid && email.invalid
-						   " type="submit" class="w-full text-white bg-blue-600 hover:bg-primary-700 focus:ring-4 focus:outline-none focus:ring-primary-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-primary-600 dark:hover:bg-primary-700 dark:focus:ring-primary-800" >Sign in</button>
-						  <p class="text-sm font-light text-gray-500 dark:text-gray-400">
-								Already have an account <a href="" class="font-medium text-primary-600 hover:underline dark:text-primary-500">Login</a>
-						  </p>
-					 </form>
-				</div>
-		  </div>
-	 </div>
-  </section>
+	<snack-bar [ngClass]="{'hidden':errorMessage.length == 0}" />
+	<div class="flex flex-col items-center justify-center px-6 py-8 mx-auto md:h-screen lg:py-0">
+		<div
+			class="w-full bg-white rounded-lg shadow dark:border md:mt-0 sm:max-w-md xl:p-0 dark:bg-gray-800 dark:border-gray-700">
+			<div class="p-6 space-y-4 md:space-y-6 sm:p-8">
+				<h1
+					class="text-xl font-bold leading-tight tracking-tight text-gray-900 md:text-2xl dark:text-white text-center">
+					Signup
+				</h1>
+				<form class="space-y-4 md:space-y-6" (ngSubmit)="handleSignupSubmit()">
+					<div>
+						<label for="name" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Your
+							Name</label>
+						<input type="text" name="name" id="name" [(ngModel)]="user.name" #name="ngModel"
+							[ngClass]="{'border-red-600 outline-0': name.invalid && name.touched}"
+							class="bg-gray-50 border border-gray-300 text-gray-900 rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+							placeholder="name" required>
+						<div *ngIf="name.invalid && name.touched">
+							<small class="text-red-600 ms-2">field should not be empty</small>
+						</div>
+					</div>
+					<div>
+						<label for="email" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Your
+							email</label>
+						<input type="email" name="email" id="email" (input)="errorMessage = ''" [(ngModel)]="user.email"
+							#email="ngModel"
+							[ngClass]="{'border-red-600 outline-0': errorMessage || (email.invalid && email.touched) }"
+							class="bg-gray-50 border border-gray-300 text-gray-900 rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+							placeholder="username" required>
+						<p class="text-red-600 text-xs ms-2 mt-1">{{errorMessage}}</p>
+						<div *ngIf="email.invalid && email.touched">
+							<small class="text-red-600 text-xs ms-2"
+								*ngIf="email.errors?.['required'] && !errorMessage">Email is required</small>
+						</div>
+					</div>
+					<div>
+						<label for="password"
+							class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Password</label>
+						<input type="password" name="password" [(ngModel)]="user.password" id="password"
+							placeholder="••••••••" #pass="ngModel"
+							class="bg-gray-50 border border-gray-300 text-gray-900 rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+							required>
+						<small class="text-red-600 text-xs ms-2 mt-2" *ngIf="pass.invalid && pass.touched">
+							Field should not be empty
+						</small>
+					</div>
+					<button type="submit"
+						class="w-full text-white bg-blue-600 hover:bg-primary-700 focus:ring-4 focus:outline-none focus:ring-primary-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-primary-600 dark:hover:bg-primary-700 dark:focus:ring-primary-800"
+						[disabled]="name.invalid || email.invalid || pass.invalid">Sign in</button>
+					<p class="text-sm font-light text-gray-500 dark:text-gray-400">
+						Already have an account <a href=""
+							class="font-medium text-primary-600 hover:underline dark:text-primary-500">Login</a>
+					</p>
+				</form>
+			</div>
+		</div>
+	</div>
+</section>
